[package]
name = "leetcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name="p0021"
path="src/p0021.rs"

[[bin]]
name="p0086"
path="src/p0086.rs"

[[bin]]
name="p0019"
path="src/p0019.rs"

[[bin]]
name="p0002"
path="src/p0023.rs"

[dependencies]
